test/tests/compiler/18_structures/invalid_parse/plx1_sizeof_struct_member_2.plx
type struc s1(a: i32)
    
pub fn main(none) i32 {
    s: struc s1 = $(10)
    sizeof(s).a = 20
    return 0
}
